# base-qquickview

./: CMakeLists.txt  README.md
qml/: main.qml
src/: AppQQuickView.cpp  AppQQuickView.h  main.cpp
